Add admin panel

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,3 +27,9 @@
 .sidebar a {
     color: #b8c7ce;
 }
+
+.content-wrapper {
+    margin-left: 230px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
