--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10906,3 +10906,9 @@ a.text-dark:focus {
   color: #b8c7ce;
 }
 
+.content-wrapper {
+  margin-left: 230px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
